--- a/hearthstone.Rmd
+++ b/hearthstone.Rmd
@@ -56,8 +56,21 @@ decks <- cbind(decks,usecard) %>%
         # add the total cost for each deck
         mutate(sum = n1+2*n2+3*n3+4*n4+5*n5+10*others) 
 rm(usecard)
+
+# save simulation results 
+write.csv(decks,file="/Users/Yinnan/Desktop/2016/HearthScience/simulation.csv")
 ```
 
+Explore the probability of using card in relation to the sum of the deck
+
+```{r}
+library(ggplot2)
+
+decks %>% ggplot(aes(x=sum, y=p4)) + geom_point()
+
+decks %>% filter(p4>0.95) %>% ggplot(aes(x=sum, y=p4)) + geom_point()
+
+```
 
 
 
