--- a/Hearthscience.Rmd
+++ b/Hearthscience.Rmd
@@ -16,7 +16,7 @@ Therefore, the initial building of the 30 cards, as well as the choices of cards
 
 * To evaluate the value of all cards.
 * To build a deck with optimal combined strength. 
-* To explore the strategies of card use for different heros or at different rounds during a game.
+* To explore the proportion of different kinds of card in a deck with simulations.
 
 ## Initial Questions: 
 >__1. What are the "true" values of individual cards? Are there any properties the Blizard company used to assign values (cost) of these cards? Is there any card undervalued/overvalued by the company?__
@@ -40,16 +40,46 @@ On the fifth stage, we will build an optional deck based on the efforts above an
 
 ## Related Work:
 
+
+##library
+Here are the libraries we have used in our project.
+```{r, warning= F error=F}
+library(rjson)
+library(dplyr)
+library(tidyr)
+library(knitr)
+library(readr)
+library(stringr)
+library(ggplot2)
+library(gridExtra)
+library(graphics)
+library(plotrix)
+library(grid)
+library(ggrepel)
+library(scales)
+library(cowplot)
+library(rvest)
+library(XML)
+library(vegan)
+library(RColorBrewer)
+library(gplots) 
+library(devtools)
+library(reshape)
+library(dendextend)
+library(reshape2)
+library(VGAM)
+```
+
+
 ## Data:
 
 We have two types of data: 1) basic card information (attack/health/cost/description of cards) and 2) frequently used decks from top players. 
 
 * __Basic card information:__ We collected card data from Hearthstone’s API: http:,, hearthstoneapi.com, Card.  It contains thorough card information of: card name, card set (Basic, Classic, Blackrock Mountain,  Goblins vs Gnomes,  Naxxramas,  Promotion,  The Grand Tournament,  The League of Explorers), card type (minions,  spells,  weapons), player class (Priest,  Hunter,  Warlock,  Shaman,  Warrior,  Mage,  Paladin,  Druid,  Rogue,  All), card description (text), 	mechanics of minions (Battlecry,  Taunt,  Normal,  HealTarget,  Charge,  Aura,  AdjacentBuff,  Spell Damage,  Freeze,  Enrage,  Divine Shield,  Stealth,  Overload,  Deathrattle,  Windfury,  Combo,  Poisonous,  Inspire), attack, health, and cost of cards. We have collected the json file using Python and transfer it into RData (and csv files) using R.
 
-```{r, warning= F}
+```{r eval=F warning=F error=F}
 ## Data wrangling from json to RData:
-library("rjson")
-library("dplyr")
+
 json_file = "cards2.txt"
 data <- fromJSON(file = json_file)
 card_category = names(data)
@@ -100,9 +130,8 @@ This part is aimed for detailed classification of minion card descriptions (othe
 
 1. For some minions that have more than one mechanics (e.g. Taunt that has deathrattle), they are only classified as one of their mechanics in the Hearthstone dataset. The following wrangling aims to classify them with all the mechanics they have with dummy variables (having certain feature = 1 vs. without certain feature = 0).
 
-```{r}
-library(tidyr)
-library(dplyr)
+```{r eval=F warning=F error=F}
+
 load("minions.RData")
 minions_text = tbl_df(minions) %>%
   select(-ID, -flavor, -type, -artist, -collectible, -howToGet, -howToGetGold, -img, -imgGold, -locale, -race, -faction, -elite) %>%
@@ -133,8 +162,7 @@ minions_text = minions_text %>%
 
 2. The beauty of Hearthstone (and the most difficult part for quantitative analysis) is that almost every minion has its unique feature that are described in text on the card. Therefore, it's hard to "value" a card without taking these descriptions into account while on the other hand, texts them selves are difficult to be simply quantified. The following wrangling aims to identify certain verbs (deal, restore, etc.) and nouns (attacks, healths, etc.) frequently used in the card description and tried to classifiy cards with more features that were not classified by their mechanics.
 
-```{r}
-
+```{r eval=F warning=F error=F}
 minions_text = minions_text %>%
   mutate(Choice = ifelse(text %in% minions_text$text[grep("; or",minions_text$text, ignore.case = T)], 1, 0)) %>% 
   mutate(Conditional = ifelse(text %in% minions_text$text[grep("if",minions_text$text, ignore.case = T)], 1, 0)) %>% 
@@ -165,51 +193,28 @@ minions_text = minions_text %>%
   mutate(Nothing = ifelse(text == "None", 1, 0))
 
 colnames(minions_text)
-```
 
-
-```{r}
 save(minions_text, file = "minions_text.RData")
 ```
 
 
 
 ## Exploratory Analysis
-load library 
-```{r pressure, warning=F}
-# setwd("~/Desktop/final/")
-#rm(list=ls()) 
-library(knitr)
-opts_chunk$set(cache = TRUE, message = FALSE)
-library(readr)
-library(dplyr)
-library(tidyr)
-library(stringr)
-library(ggplot2)
-library(gridExtra)
-library(graphics)
-library(plotrix)
-library(gridBase)
-library(grid)
-library(sqldf)
-library(ggrepel)
-library(scales)
+```{r warning=F error=F}
+
 theme_set(theme_bw(base_size = 16))
-```
-load data
-```{r}
+
 load("minions_text.RData")
 data<-minions_text
 ```
 distribution of Cost
-```{r}
-#remove costs that are "12" and "20" 
+```{r warning=F error=F}
+#remove costs that are "12" and "20" for these two cards are very special
 Cost<-data%>%dplyr::arrange(cost)
 Cost<-unique(data%>%filter(cost<=10)%>%group_by(cost)%>%mutate(n=n())%>%ungroup()%>%select(cost,n))
 Cost<-Cost%>%mutate(pos=cumsum(n)-n/2)
 p<-Cost%>%ggplot(aes(x=1,y=n,fill=factor(cost)))
 p+geom_bar(stat="identity",width=1)+geom_text(aes(x=1.6,y=pos,label = percent(n/sum(n))))+coord_polar(theta="y")+ xlab('')+ylab('')+theme(axis.text=element_blank(),axis.ticks=element_blank(),panel.grid=element_blank())+ggtitle("Pie Chart of Card Cost")
-#pie(slices,labels = lbls, col=rainbow(length(lbls)),main="Pie Chart of Card Cost distribution")
 #histogram
 qplot(data$cost,geom="histogram",xlab="cost",main="Histogram for cost")
 ```
@@ -217,7 +222,7 @@ qplot(data$cost,geom="histogram",xlab="cost",main="Histogram for cost")
 Conclusion: cards with cost "2","3","4" out of the 11 possible costs occupying around 54% in total are most common in the deck
 
 distribution of attack
-```{r}
+```{r warning=F error=F}
 Attackk<-data%>%arrange(attack)
 Attack<-unique(Attackk%>%group_by(attack)%>%mutate(n=n())%>%ungroup()%>%select(attack,n))
 #pie chart
@@ -229,7 +234,7 @@ qplot(data$attack,geom="histogram",xlab="attack",main="Histogram for attack")
 ```
 
 distribution of health
-```{r}
+```{r warning=F error=F}
 Health<-data%>%arrange(health)
 Health<-unique(Health%>%group_by(health)%>%mutate(n=n())%>%ungroup()%>%select(health,n))
 #pie chart
@@ -241,7 +246,7 @@ qplot(data$health,geom="histogram",xlab="health",main="Histogram for health")
 ```
 
 distribution of mechanics 
-```{r}
+```{r warning=F error=F}
 Mechanics<-data%>%arrange(mechanics)
 Mechanics<-unique(Mechanics%>%group_by(mechanics)%>%mutate(n=n())%>%ungroup()%>%select(mechanics,n))
 #pie chart
@@ -249,12 +254,11 @@ Mechanics<-Mechanics%>%mutate(pos=cumsum(n)-n/2)
 p<-Mechanics%>%ggplot(aes(x=1,y=n,fill=factor(mechanics)))
 p+geom_bar(stat="identity",width=1)+geom_text(aes(x=1.6,y=pos,label = percent(n/sum(n))))+coord_polar(theta="y")+ xlab('')+ylab('')+theme(axis.text=element_blank(),axis.ticks=element_blank(),panel.grid=element_blank())+ggtitle("Pie Chart of Mechanics")
 #histogram
-library(ggplot2)
-qplot(data$mechanics,,xlab="mechanics",main="Histogram for Mechanics")+theme(axis.text.x = element_text(angle = 90, hjust = 1))
+qplot(data$mechanics,xlab="mechanics",main="Histogram for Mechanics")+theme(axis.text.x = element_text(angle = 90, hjust = 1))
 ```
 
 distribution of playerclass
-```{r}
+```{r warning=F error=F}
 pc<-data%>%arrange(playerClass)
 pc<-unique(pc%>%group_by(playerClass)%>%mutate(n=n())%>%ungroup()%>%select(playerClass,n))
 #pie chart
@@ -262,13 +266,12 @@ playerClass<-pc%>%mutate(pos=cumsum(n)-n/2)
 p<-playerClass%>%ggplot(aes(x=1,y=n,fill=factor(playerClass)))
 p+geom_bar(stat="identity",width=1)+geom_text(aes(x=1.6,y=pos,label = percent(n/sum(n))))+coord_polar(theta="y")+ xlab('')+ylab('')+theme(axis.text=element_blank(),axis.ticks=element_blank(),panel.grid=element_blank())+ggtitle("Pie Chart of playerClass")
 #histogram
-library(ggplot2)
-qplot(data$playerClass,,xlab="playerClass",main="Histogram for playerClass")+theme(axis.text.x = element_text(angle = 90, hjust = 1))
+qplot(data$playerClass,xlab="playerClass",main="Histogram for playerClass")+theme(axis.text.x = element_text(angle = 90, hjust = 1))
 
 ```
 
 distribution of cardSet
-```{r}
+```{r warning=F error=F}
 cs<-data%>%arrange(cardSet)
 cs<-unique(cs%>%group_by(cardSet)%>%mutate(n=n())%>%ungroup()%>%select(cardSet,n))
 #pie chart
@@ -276,51 +279,33 @@ cs<-cs%>%mutate(pos=cumsum(n)-n/2)
 p<-cs%>%ggplot(aes(x=1,y=n,fill=factor(cardSet)))
 p+geom_bar(stat="identity",width=1)+geom_text(aes(x=1.6,y=pos,label = percent(n/sum(n))))+coord_polar(theta="y")+ xlab('')+ylab('')+theme(axis.text=element_blank(),axis.ticks=element_blank(),panel.grid=element_blank())+ggtitle("Pie Chart of cardSet")
 #histogram
-library(ggplot2)
-qplot(data$cardSet,,xlab="cardSet",main="Histogram for cardSet")+theme(axis.text.x = element_text(angle = 90, hjust = 1))
+qplot(data$cardSet,xlab="cardSet",main="Histogram for cardSet")+theme(axis.text.x = element_text(angle = 90, hjust = 1))
 
 ```
 
 distribution of rarity
-```{r}
+```{r warning=F error=F}
 rr<-unique(data%>%group_by(rarity)%>%mutate(n=n())%>%ungroup()%>%select(rarity,n))
 #pie chart
 rr<-rr%>%mutate(pos=cumsum(n)-n/2)
 p<-rr%>%ggplot(aes(x=1,y=n,fill=factor(rarity)))
 p+geom_bar(stat="identity",width=1)+geom_text(aes(x=1.6,y=pos,label = percent(n/sum(n))))+coord_polar(theta="y")+ xlab('')+ylab('')+theme(axis.text=element_blank(),axis.ticks=element_blank(),panel.grid=element_blank())+ggtitle("Pie Chart of rarity")
 #histogram
-library(ggplot2)
-qplot(data$cardSet,,xlab="rarity",main="Histogram for rarity")+theme(axis.text.x = element_text(angle = 90, hjust = 1))
+qplot(data$cardSet,xlab="rarity",main="Histogram for rarity")+theme(axis.text.x = element_text(angle = 90, hjust = 1))
 ```
 
 ##correlation of warlock
 
 #pearson correlation of cards
-load library
-```{r}
-library(cowplot)
-library(rvest)
-library(XML)
-library(Heatplus)
-library(vegan)
-library(RColorBrewer)
-library(gplots) 
-library(devtools)
-library(reshape)
-library(dendextend)
-library(colorspace)
-library(reshape2)
-```
 load data
-```{r}
+```{r warning=F error=F}
 baseURL<-"http://www.hearthstonetopdecks.com/deck-category/class/warlock/page/"
 classes<-c("druid/","hunter/","mage/","paladin/","priest/","rogue/","shaman/","warlock/","warrior/")
-tableURL<-"http://www.hearthstonetopdecks.com/deck-category/class/druid/page/"
 
 ```
 
 data wrangling 
-```{r}
+```{r warning=F error=F}
 allDecks<-list()
 
 for (j in 1:5){
@@ -371,7 +356,7 @@ rownames(largerTable)<-t(largerTable[,1])
 ```
 
 dataset as a whole
-```{r}
+```{r warning=F error=F}
 ###
 data<-largerTable%>%select(-cardNames)
 data.t<-t(data)
@@ -388,12 +373,11 @@ plot(hClust,cex=1)
 ```
 
 heatmap
-```{r}
+```{r warning=F error=F}
 
 heatmap(mtscaled,Colv=F,cexRow=0.4,cexCol = 0.4)
 #data exploration ( 260 CV)
 image(as.matrix(d1))
-library(ggplot2)
 #no label of x-axis, y-axis
 ggplot(data = data.m, aes(x=X1, y=X2, fill=value)) + 
   geom_tile()
@@ -480,7 +464,7 @@ p+ theme(axis.text.y = element_text(vjust = 1,
     size = 5, hjust = 1))+scale_x_discrete(expand = c(0, 0)) + scale_y_discrete(expand = c(0, 0))+theme(legend.background=element_rect(),legend.margin=unit(1,"cm"))
 
 ### triangle heatmap
-install.packages("GGally")
+
 source("https://raw.githubusercontent.com/briatte/ggcorr/master/ggcorr.R")
 ggcorr(cormat)
 ggcorr(data=NULL,cor_matrix=cor(data.t,use = "everything"),nbreak=4,low = "steelblue", mid = "white", high = "darkred")
@@ -497,7 +481,7 @@ tmp %>%  ggplot(aes(PC1, PC2)) + geom_point() +
 ```
 
 #look at 4 clusters
-```{r}
+```{r warning=F error=F}
 kmeans.cluster<-kmeans(pcaData, centers=4)
 pc.df<-data.frame(ID=names(pca1),PCA1=pca1, PCA2=pca2, 
                   Cluster=factor(kmeans.cluster$cluster))
@@ -603,7 +587,7 @@ p4+ theme(axis.text.y = element_text(vjust = 1,
 
 
 ```{r, fig.width= 8}
-library(ggplot2)
+
 load("minions_text.RData")
 ## cost vs attack+health:
 minions_text %>% ggplot(aes(cost)) + stat_bin(aes(y = ..count..), bins = 50 , position='dodge')
@@ -613,14 +597,14 @@ minions_text %>% mutate(attplusheal = attack+health) %>% ggplot(aes(attplusheal)
 
 From the above plots, we can found similar distributions between the cost and the sum of attach and health, where the distributions are right-skewed. Also, there seems to be some outliers that are very different from other cards.
 
-```{r}
+```{r warning=F error=F}
 minions_text %>%
   filter(cost > 10) %>%
   select(name, cost, attack, health, mechanics, playerClass)
 ```
 
 It might be a good idea to filter out these cards.
-```{r}
+```{r warning=F error=F}
 minions_text = minions_text %>% filter(cost <= 10)
 
 ## cost vs attack+health:
@@ -649,7 +633,7 @@ minions_text %>% ggplot(aes(cost1, group = cardSet, fill = cardSet)) + stat_bin(
 ```
 
 
-```{r}
+```{r warning=F error=F}
 
 ## by attack, cost, health:
 minions_bars = minions_text %>% gather(key, value, cost, attack, health)
@@ -673,7 +657,6 @@ minions_text %>% ggplot(aes(health, group = cardSet, fill = cardSet)) + stat_bin
 ## X: attack
 ## Y: cost
 
-library(VGAM)
 minions_text1 = minions_text %>% 
   select(cardId,cost, health, attack, cost1, playerClass, name, mechanics) %>%
   filter(cost != 0) %>%
@@ -725,7 +708,6 @@ rmse_results = data_frame(method = "X: attack", RMSE = model1)
 ## X: attplusheal
 ## Y: cost
 
-library(VGAM)
 minions_text2 = minions_text %>% 
   select(cardId,cost, health, attack, cost1) %>%
   filter(cost != 0) %>%
@@ -774,7 +756,6 @@ rmse_results =  bind_rows(rmse_results, data_frame(method = "X: attplusheal", RM
 ## X: attack, health
 ## Y: cost
 
-library(VGAM)
 fitCL = vglm(cbind(Y1, Y2, Y3, Y4, Y5, Y6, Y7) ~ health + attack, cumulative(parallel = T, reverse = F), data = train)
 summary(fitCL)
 
@@ -803,13 +784,13 @@ rmse_results = bind_rows(rmse_results,data_frame(method="X: attack, health",
 rmse_results
 ```
 
-```{r}
+```{r warning=F error=F}
 test3 %>% select(name, cost1, value, playerClass, mechanics) %>% mutate(resid = value - cost1) %>% filter(resid !=0) %>% print(n = 50) 
 ```
 
 
-```{r}
-library(VGAM)
+```{r warning=F error=F}
+
 minions_text = minions_text %>%
   filter(cost != 0) %>%
   arrange(cost) %>%
@@ -867,7 +848,7 @@ test3 %>% filter(value != cost1) %>%
 
 
 
-```{r}
+```{r warning=F error=F}
 ## X: attack, health, charge
 ## Y: cost
 
@@ -904,4 +885,263 @@ rmse_results = bind_rows(rmse_results,data_frame(method="X: attack, health, char
 rmse_results
 test3 %>% filter(value != cost1) %>%
   print(n=50)
+```
+
+##Deck Analysis
+Instead of looking at the card information alone, we are trying to consider how one card interacts with others. We are using the built-up decks from top players of Hearthstone from the following website:
+<http://www.hearthstonetopdecks.com/>
+A typical deck looks like this: ![deck][deck.png]
+
+###Data Wrangling
+```{r warning=F error=F eval=F}
+classes<-c("druid/","hunter/","mage/","paladin/","priest/","rogue/","shaman/","warlock/","warrior/")
+removeList<-c(9,6,10,10,4,7,10,7,7)
+baseURL<-"http://www.hearthstonetopdecks.com/deck-category/class/"
+
+minions<-read.csv("minions.csv",sep="\t")
+weapons<-read.csv("weapons.csv",sep="\t")
+spells<-read.csv("spells.csv",sep="\t")
+cards<-rbind(minions,weapons,spells)
+load("D:/HSPH/BIO 260/final/data/minions_text.RData")
+
+totalInfoDeckList<-list()
+
+heroDeckLists<-list()
+
+for(k in 1:length(classes)){
+  class<-classes[k]
+  classBaseURL<-paste(baseURL,class,"page/",sep="")
+  allDecks<-list()
+  for (j in 1:5){
+    tableURL<-paste(classBaseURL,j,sep="")
+    tables<-as.data.frame(readHTMLTable(tableURL))
+    deckNames<-lapply(tables[,2],as.character)
+    deckNames<-unlist(deckNames)
+    
+    for(i in 1:length(deckNames)){
+      urlName<-tolower(gsub("\\s","-",gsub("[^\\w \\s]+","",deckNames[i],perl = TRUE),perl = TRUE))
+      
+      testURL<-paste("http://www.hearthstonetopdecks.com/decks/",urlName,sep="")
+      tryCatch(webpage<-read_html(testURL),error=function(e){return(i)})
+      
+      cardNames<-webpage%>%
+        html_nodes(".card-name")%>%
+        html_text()
+      
+      cardCounts<-webpage%>%
+        html_nodes(".card-count")%>%
+        html_text()%>%
+        as.numeric()
+      
+      deckId<-(j-1)*25+i
+      
+      deck<-cbind(cardNames,cardCounts,rep(deckId,length(cardNames)))
+      
+      allDecks[[deckId]]<-deck
+    }
+  }
+  largerTable<-data.frame()
+  
+  for (i in removeList[k]:125){
+    largerTable<-rbind(largerTable,allDecks[[i]])
+  }
+  
+  largerTable<-largerTable%>%spread(key=V3,value=cardCounts)
+  
+  for (i in 2:length(largerTable)){
+    largerTable[,i]<-as.numeric(as.character(largerTable[,i]))
+  }
+  
+  largerTable[is.na(largerTable)]<-0
+  
+  heroDeckLists[[k]]<-largerTable
+  
+}
+
+for(i in 1:9){
+  totalInfoDeckList[[i]]<-heroDeckLists[[i]]%>%select(c(1,length(heroDeckLists[[i]])))
+}
+
+for(i in 1:9){
+  totalInfoDeckList[[i]]<-totalInfoDeckList[[i]]%>%left_join(cards,by=c("cardNames"="name"))
+}
+decks<-list()
+for(i in 1:9){
+  decks[[i]]<-heroDeckLists[[i]]%>%gather(deckId,cardCounts,2:(length(heroDeckLists[[i]])-1))
+}
+```
+
+###Deeper look into the deck information
+
+From our empirical knowledge, we know that each deck has its own strategy to win the game, such as aggro, control, midrange, face, etc. These strategies are highly related to the average cost of all the minions inside the deck. 
+
+```{r,warning=F,error=F}
+###warlock deck
+warlockDeckCost<-decks[[8]]%>%filter(cardCounts!=0)%>%
+  left_join(cards,by=c("cardNames"="name"))%>%
+  filter(type=="Minion")%>%
+  group_by(deckId)%>%
+  mutate(cardTotalCost=cost*cardCounts)%>%
+  mutate(aveCost=mean(cardTotalCost))%>%
+  ungroup()
+
+warlockDeckCost%>%select(deckId,aveCost)%>%distinct()%>%
+  ggplot(aes(x=aveCost))+geom_histogram(binwidth = 0.5)+ggtitle("Warlock deck distribution")
+
+###paladin deck
+paladinDeckCost<-decks[[4]]%>%filter(cardCounts!=0)%>%
+  left_join(cards,by=c("cardNames"="name"))%>%
+  filter(type=="Minion")%>%
+  group_by(deckId)%>%
+  mutate(cardTotalCost=cost*cardCounts)%>%
+  mutate(aveCost=mean(cardTotalCost))%>%
+  ungroup()
+
+paladinDeckCost%>%select(deckId,aveCost)%>%distinct()%>%
+  ggplot(aes(x=aveCost))+geom_histogram(binwidth = 0.5)+ggtitle("Paladin deck distribution")
+
+
+###druid deck
+druidDeckCost<-decks[[1]]%>%filter(cardCounts!=0)%>%
+  left_join(cards,by=c("cardNames"="name"))%>%
+  filter(type=="Minion")%>%
+  group_by(deckId)%>%
+  mutate(cardTotalCost=cost*cardCounts)%>%
+  mutate(aveCost=mean(cardTotalCost))%>%
+  ungroup()
+
+druidDeckCost%>%select(deckId,aveCost)%>%distinct()%>%
+  ggplot(aes(x=aveCost))+geom_histogram(binwidth = 0.5)+ggtitle("Druid deck distribution")
+
+
+###hunter deck
+hunterDeckCost<-decks[[2]]%>%filter(cardCounts!=0)%>%
+  left_join(cards,by=c("cardNames"="name"))%>%
+  filter(type=="Minion")%>%
+  group_by(deckId)%>%
+  mutate(cardTotalCost=cost*cardCounts)%>%
+  mutate(aveCost=mean(cardTotalCost))%>%
+  ungroup()
+
+hunterDeckCost%>%select(deckId,aveCost)%>%distinct()%>%
+  ggplot(aes(x=aveCost))+geom_histogram(binwidth = 0.5)+ggtitle("Hunter deck distribution")
+
+###Mage deck
+mageDeckCost<-decks[[3]]%>%filter(cardCounts!=0)%>%
+  left_join(cards,by=c("cardNames"="name"))%>%
+  filter(type=="Minion")%>%
+  group_by(deckId)%>%
+  mutate(cardTotalCost=cost*cardCounts)%>%
+  mutate(aveCost=mean(cardTotalCost))%>%
+  ungroup()
+
+mageDeckCost%>%select(deckId,aveCost)%>%distinct()%>%
+  ggplot(aes(x=aveCost))+geom_histogram(binwidth = 0.5)+ggtitle("Mage deck distribution")
+
+###Priest deck
+priestDeckCost<-decks[[5]]%>%filter(cardCounts!=0)%>%
+  left_join(cards,by=c("cardNames"="name"))%>%
+  filter(type=="Minion")%>%
+  group_by(deckId)%>%
+  mutate(cardTotalCost=cost*cardCounts)%>%
+  mutate(aveCost=mean(cardTotalCost))%>%
+  ungroup()
+
+priestDeckCost%>%select(deckId,aveCost)%>%distinct()%>%
+  ggplot(aes(x=aveCost))+geom_histogram(binwidth = 0.5)+ggtitle("Priest deck distribution")
+
+##Rogue deck
+rogueDeckCost<-decks[[6]]%>%filter(cardCounts!=0)%>%
+  left_join(cards,by=c("cardNames"="name"))%>%
+  filter(type=="Minion")%>%
+  group_by(deckId)%>%
+  mutate(cardTotalCost=cost*cardCounts)%>%
+  mutate(aveCost=mean(cardTotalCost))%>%
+  ungroup()
+
+rogueDeckCost%>%select(deckId,aveCost)%>%distinct()%>%
+  ggplot(aes(x=aveCost))+geom_histogram(binwidth = 0.5)+ggtitle("Rogue deck distribution")
+
+###Shaman
+shamanDeckCost<-decks[[7]]%>%filter(cardCounts!=0)%>%
+  left_join(cards,by=c("cardNames"="name"))%>%
+  filter(type=="Minion")%>%
+  group_by(deckId)%>%
+  mutate(cardTotalCost=cost*cardCounts)%>%
+  mutate(aveCost=mean(cardTotalCost))%>%
+  ungroup()
+
+shamanDeckCost%>%select(deckId,aveCost)%>%distinct()%>%
+  ggplot(aes(x=aveCost))+geom_histogram(binwidth = 0.5)+ggtitle("Shaman deck distribution")
+
+###Warrior deck
+warriorDeckCost<-decks[[9]]%>%filter(cardCounts!=0)%>%
+  left_join(cards,by=c("cardNames"="name"))%>%
+  filter(type=="Minion")%>%
+  group_by(deckId)%>%
+  mutate(cardTotalCost=cost*cardCounts)%>%
+  mutate(aveCost=mean(cardTotalCost))%>%
+  ungroup()
+
+warriorDeckCost%>%select(deckId,aveCost)%>%distinct()%>%
+  ggplot(aes(x=aveCost))+geom_histogram(binwidth = 0.5)+ggtitle("Warrior deck distribution")
+
+
+###summary
+druidDeckCost%>%select(deckId,aveCost)%>%distinct()%>%summary()%>%kable
+hunterDeckCost%>%select(deckId,aveCost)%>%distinct()%>%summary()%>%kable
+mageDeckCost%>%select(deckId,aveCost)%>%distinct()%>%summary()%>%kable
+paladinDeckCost%>%select(deckId,aveCost)%>%distinct()%>%summary()%>%kable
+priestDeckCost%>%select(deckId,aveCost)%>%distinct()%>%summary()%>%kable
+rogueDeckCost%>%select(deckId,aveCost)%>%distinct()%>%summary()%>%kable
+shamanDeckCost%>%select(deckId,aveCost)%>%distinct()%>%summary()%>%kable
+warlockDeckCost%>%select(deckId,aveCost)%>%distinct()%>%summary()%>%kable
+warriorDeckCost%>%select(deckId,aveCost)%>%distinct()%>%summary()%>%kable
+
+```
+From the histogram we can see warlock is quite different from other heros, the distribution of the costs of decks has double peaks, while others are more likely following a normal distribution. This finding gives us a suggestion to explore data furtherly.
+
+###Explore Card Interactions within Warlock Decks
+Let's have a look at the correlation between the cards within warlock decks.
+```{r,warning=F,error=F}
+data<-read.csv("correlation.csv")
+
+#warlockDecks<-heroDeckLists[[8]]
+#rownames(warlockDecks)<-t(warlockDecks[,1])
+#data<-warlockDecks%>%select(-cardNames)
+
+#calculate correlation matrix
+corMatrix<-cor(x=data)
+hClust<-hclust(dist(data),method="complete")
+plot(hClust,cex=0.6)
+
+pc<-prcomp(corMatrix)
+summary(pc)
+```
+From the principle components analysis, we can see the top 2 principle components have explained 2/3 of the variance between cards. So here, we are going to use the first 2 pcs to do the following analysisto keep the scale of problem small enough.
+```{r,warning=F,error=F}
+tmp <- data.frame(pc$rotation, name = rownames(data))
+tmp %>%  ggplot(aes(PC1, PC2)) + geom_point() + 
+  geom_text_repel(aes(PC1, PC2, label=name),
+                  data = filter(tmp,PC1 < -0.15 | PC1 >0.2 | PC2 < -0.2 | PC2>0.1))
+
+
+pcaData <-pc$x[,1:2]
+pca1 <-pc$x[,1]
+pca2 <-pc$x[,2]
+
+wss <- (nrow(pcaData)-1)*sum(apply(pcaData,2,var))
+for (i in 2:20) wss[i] <- sum(kmeans(pcaData,centers=i)$withinss)
+plot(1:20, wss, type="b", xlab="Number of Clusters",
+     ylab="Within groups sum of squares")
+
+
+kmeans.cluster<-kmeans(pcaData, centers=4)
+pc.df<-data.frame(ID=names(pca1),PCA1=pca1, PCA2=pca2, Cluster=factor(kmeans.cluster$cluster))
+pc.df%>%ggplot(aes(x=PCA1, y=PCA2, label=ID, color=Cluster))+geom_jitter()+
+  geom_text_repel(aes(PCA1, PCA2, label=ID),data = filter(pc.df,PCA1 < -2.5 | PCA1 >2.5| PCA2 < -1.5 | PCA2>1.5))
+
+pc.df%>%group_by(Cluster)%>%summarize(n())
+
+
 ```
